create control section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/text-styles.css" />
     <link rel="stylesheet" href="styles/hero-section.css" />
+    <link rel="stylesheet" href="styles/control-section.css" />
 </head>
 
 <body>
@@ -61,7 +63,94 @@
                 </div>
             </div>
         </section>
-        <section class="control"></section>
+        <section class="control">
+            <div class="control-container">
+                <div class="control-header">
+                    <div class="description-green">Services</div>
+                    <div class="header-text">Get Control Over Your Business I take your finance to next level</div>
+                </div>
+
+                <div class="control-cards">
+                    <div class="control-card-item">
+                        <img class="control-card-item__icon" src="static/control_a.svg" alt="control_a">
+                        <div class="control-item-header-text">
+                            <div class="header-text-25">
+                                Audit & Evaluation
+                            </div>
+                            <div class="regular-text">
+                                Get help from Alex Moore, a professional business coach with advanced experience on
+                                growth
+                                and business scaling.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="control-card-item black-item">
+                        <img class="control-card-item__icon" src="static/control_b.svg" alt="control_a">
+                        <div class="control-item-header-text">
+                            <div class="header-text-25 white-color">
+                                Financial Projections
+                            </div>
+                            <div class="regular-text white-color">
+                                Get help from Alex Moore, a professional business coach with advanced experience on
+                                growth
+                                and business scaling.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="control-card-item">
+                        <img class="control-card-item__icon" src="static/control_c.svg" alt="control_a">
+                        <div class="control-item-header-text">
+                            <div class="header-text-25">
+                                Funds and investments
+                            </div>
+                            <div class="regular-text">
+                                Get help from Alex Moore, a professional business coach with advanced experience on
+                                growth
+                                and business scaling.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="control-card-item">
+                        <img class="control-card-item__icon" src="static/control_d.svg" alt="control_a">
+                        <div class="control-item-header-text">
+                            <div class="header-text-25">
+                                Finance & Restructuring
+                            </div>
+                            <div class="regular-text">
+                                Get help from Alex Moore, a professional business coach with advanced experience on
+                                growth
+                                and business scaling.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="control-card-item">
+                        <img class="control-card-item__icon" src="static/control_e.svg" alt="control_a">
+                        <div class="control-item-header-text">
+                            <div class="header-text-25">
+                                Taxes & Efficiency
+                            </div>
+                            <div class="regular-text">
+                                Get help from Alex Moore, a professional business coach with advanced experience on
+                                growth
+                                and business scaling.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="control-card-item">
+                        <img class="control-card-item__icon" src="static/control_f.svg" alt="control_a">
+                        <div class="control-item-header-text">
+                            <div class="header-text-25">
+                                Investment banking
+                            </div>
+                            <div class="regular-text">
+                                Get help from Alex Moore, a professional business coach with advanced experience on
+                                growth
+                                and business scaling.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
     </main>
 </body>
 
