add counter button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="styles/text-styles.css" />
     <link rel="stylesheet" href="styles/hero-section.css" />
     <link rel="stylesheet" href="styles/control-section.css" />
+    <link rel="stylesheet" href="styles/control-section.css" />
+    <link rel="stylesheet" href="styles/counter-section.css" />
 </head>
 
 <body>
@@ -24,6 +26,10 @@
         </div>
         <div class="phone-number">+800 1234 654</div>
     </header>
+    <section class="counter">
+        <div class="counter-button">Click</div>
+        <div class="counter-button-result">Counter: <span>0</span></div>
+    </section>
     <main class="main">
         <section class="hero">
             <div class="welcome-window">
@@ -153,5 +159,7 @@
         </section>
     </main>
 </body>
+
+<script src="script.js"></script>
 
 </html>
