--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="styles/text-styles.css" />
     <link rel="stylesheet" href="styles/hero-section.css" />
     <link rel="stylesheet" href="styles/control-section.css" />
-    <link rel="stylesheet" href="styles/control-section.css" />
     <link rel="stylesheet" href="styles/counter-section.css" />
+    <link rel="stylesheet" href="styles/form-section.css" />
 </head>
 
 <body>
@@ -26,6 +26,44 @@
         </div>
         <div class="phone-number">+800 1234 654</div>
     </header>
+    <section class="form">
+        <form>
+            <label>
+                <p>Вопрос 1:</p>
+                <input type="text" placeholder="Оставьте тут свой ответ"><br>
+            </label>
+
+            <label>
+                <p>Вопрос 2:</p>
+                <input type="text" placeholder="Оставьте тут свой ответ"><br>
+            </label>
+
+            <label>
+                <p>Вопрос 3:</p>
+
+                <div class="question-3-options">
+                    <input type="checkbox">
+                    <label>a</label><br>
+                    <input type="checkbox">
+                    <label>b</label><br>
+                    <input type="checkbox">
+                    <label>c</label><br>
+                </div>
+            </label>
+
+            <label>
+                <p>ФИО:</p>
+                <input type="text" placeholder="Иванов Иван Иванович">
+            </label>
+
+            <label>
+                <p>Телефон:</p>
+                <input type="tel" placeholder="+7 111 222 33 44">
+            </label>
+
+            <input type="submit" value="Оставить заявку">
+        </form>
+    </section>
     <section class="counter">
         <div class="counter-button">Click</div>
         <div class="counter-button-result">Counter: <span>0</span></div>
