--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles/control-section.css" />
     <link rel="stylesheet" href="styles/counter-section.css" />
     <link rel="stylesheet" href="styles/form-section.css" />
+    <link rel="stylesheet" href="styles/feedback-slider-section.css" />
 </head>
 
 <body>
@@ -26,6 +27,20 @@
         </div>
         <div class="phone-number">+800 1234 654</div>
     </header>
+    <section class="feedback-slider">
+        <div class="slider">
+            <div class="slider-track">
+                <div class="slide active">1</div>
+                <div class="slide">2</div>
+                <div class="slide">3</div>
+            </div>
+
+            <button class="prev">&#10094;</button>
+            <button class="next">&#10095;</button>
+
+            <div class="dots"></div>
+        </div>
+    </section>
     <section class="form">
         <form>
             <label>
@@ -199,5 +214,6 @@
 </body>
 
 <script src="script.js"></script>
+<script src="slider-script.js"></script>
 
 </html>
