--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles/control-section.css" />
     <link rel="stylesheet" href="styles/counter-section.css" />
     <link rel="stylesheet" href="styles/form-section.css" />
+    <link rel="stylesheet" href="styles/feedback-section.css" />
 </head>
 
 <body>
@@ -26,6 +27,26 @@
         </div>
         <div class="phone-number">+800 1234 654</div>
     </header>
+    <section class="feedback-slider">
+        <div class="feedback-container">
+            <div class="slider-container">
+                <div class="slide">1</div>
+                <div class="slide">2</div>
+                <div class="slide">3</div>
+            </div>
+
+            <div class="button-container">
+                <button class="prev">&#9664;</button>
+                <div class="dots-container">
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                </div>
+                <button class="next">&#9654;</button>
+            </div>
+        </div>
+    </section>
+
     <section class="form">
         <form>
             <label>
@@ -198,6 +219,7 @@
     </main>
 </body>
 
-<script src="script.js"></script>
+<script src="scripts/script.js"></script>
+<script src="scripts/slider.js"></script>
 
 </html>
